# service/api/api-handler.go
@@ -17,19 +17,19 @@ func (rt *_router) Handler() http.Handler {
 	rt.router.DELETE("/addphoto", rt.DeletePhotoProfile)
 	rt.router.GET("/profile", rt.ProfileInfo)
 	rt.router.POST("/profile", rt.UpdateProfileInfo)
-	rt.router.GET("/profile/{id}", rt.GetBasicProfile)
-	rt.router.POST("/profile/{id}", rt.AddFollowerProfile)
-	rt.router.DELETE("/profile/{id}", rt.UnFollowerProfile)
-	rt.router.POST("/profile/{id}/ban", rt.BanFollowerProfile)
-	rt.router.DELETE("/profile/{id}/ban", rt.UnBanFollowerProfile)
-	rt.router.GET("/profile/{id}/ultra", rt.GetUltraBasicProfile)
-	rt.router.GET("/profile/{id}/{imageId}", rt.GetProfileImageInfo)
-	rt.router.POST("/profile/{id}/{imageId}/like", rt.AddLikeProfile)
-	rt.router.DELETE("/profile/{id}/{imageId}/like", rt.DeleteLikeProfile)
-	rt.router.POST("/profile/{id}/{imageId}/comment", rt.AddCommentProfile)
-	rt.router.DELETE("/profile/{id}/{imageId}/comment", rt.DeleteCommentProfile)
-	rt.router.GET("/profile/{id}/followers", rt.GetProfileFollowers)
-	rt.router.GET("/profile/{id}/followings", rt.GetProfileFollowings)
+	rt.router.GET("/profile/:id", rt.GetBasicProfile)
+	rt.router.POST("/profile/:id", rt.AddFollowerProfile)
+	rt.router.DELETE("/profile/:id", rt.UnFollowerProfile)
+	rt.router.POST("/profile/:id/ban", rt.BanFollowerProfile)
+	rt.router.DELETE("/profile/:id/ban", rt.UnBanFollowerProfile)
+	rt.router.GET("/profile/:id/ultra", rt.GetUltraBasicProfile)
+	rt.router.GET("/profile/:id/image/:imageid", rt.GetProfileImageInfo)
+	rt.router.POST("/profile/:id/image/:imageid/like", rt.AddLikeProfile)
+	rt.router.DELETE("/profile/:id/image/:imageId/like", rt.DeleteLikeProfile)
+	rt.router.POST("/profile/:id/iamge/:imageId/comment", rt.AddCommentProfile)
+	rt.router.DELETE("/profile/:id/image/:imageId/comment", rt.DeleteCommentProfile)
+	rt.router.GET("/profile/:id/followers", rt.GetProfileFollowers)
+	rt.router.GET("/profile/:id/followings", rt.GetProfileFollowings)
 	rt.router.GET("/search", rt.SearchProfile)
 
 	return rt.router
